removed the fixed-height menu on tablet

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     max-height: none !important;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1024px) {
     .stylista-blogger-menu .menu-container .menu-desktop {
         max-height: 50px !important;
     }
